assets/styles/main.css
/* ------------------ Global settings ------------------ */

html {
 box-sizing: border-box;
}
*, *:before, *:after {
 box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6,
p, ol, ul {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Libre Baskerville', serif;
  color: #2D2D2D;
  min-height: 100vh;
}

h1 {
  font-size: 28px;
}

h2 {
  font-size: 28px;
  color: #F65485;
  font-weight: bold;
}

.formula {
  margin-top: 24px;
  margin-bottom: 24px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container {
  max-width: 1050px;
  height: 100%;
  margin: auto;
  padding: 0 20px;
}

/* ----------------------- Header ---------------------- */

#header {
  background-color: #F65485;
  color: #fff;
  height: 56px;
}

#header .container {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* -------------------- Page layout -------------------- */

#main .container {
  padding: 56px 20px;
  display: flex;
  min-width: 1050px;
}

.left-panel,
.right-panel {
  width: 50%;
}

.left-panel {
  padding-right: 15px;
}

.right-panel {
  padding-left: 15px;
}

#page-content {
  height: 380px;
  overflow: scroll;
  position: relative;
}

#bottom-half {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.controls {
  width: 50%;
  margin-right: 15px;
}

.matrix-values {
  min-height: 335px;
  flex-grow: 1;
  margin-left: 15px;
  border: 1px dotted rgba(45, 45, 45, 1);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* ------------------- Top Navigation ------------------ */

.nav-btn {
  width: 40px;
  height: 40px;
  display: inline-block;
  margin-right: 25px;
  cursor: pointer;
}

/* inactive */

#btn-intro {
  background: url(../icons/intro/inactive.svg);
}

#btn-translate {
  background: url(../icons/translate/inactive.svg);
}

#btn-scale {
  background: url(../icons/scale/inactive.svg);
}

#btn-shear {
  background: url(../icons/shear/inactive.svg);
}

#btn-rotate {
  background: url(../icons/rotate/inactive.svg);
}

/* hover */

#btn-intro:hover {
  background: url(../icons/intro/hover.svg);
}

#btn-translate:hover {
  background: url(../icons/translate/hover.svg);
}

#btn-scale:hover {
  background: url(../icons/scale/hover.svg);
}

#btn-shear:hover {
  background: url(../icons/shear/hover.svg);
}

#btn-rotate:hover {
  background: url(../icons/rotate/hover.svg);
}

/* active */

#btn-intro.active {
  background: url(../icons/intro/active.svg);
}

#btn-translate.active {
  background: url(../icons/translate/active.svg);
}

#btn-scale.active {
  background: url(../icons/scale/active.svg);
}

#btn-shear.active {
  background: url(../icons/shear/active.svg);
}

#btn-rotate.active {
  background: url(../icons/rotate/active.svg);
}

/* --------------------- Scrollbar --------------------- */

.simplebar-track {
  background-color: rgba(246, 84, 133, 0.1);
  border-radius: 6px;
}

.simplebar-scrollbar:before {
  background-color: rgba(246, 84, 133, 1);
}

/* ------------------- Range sliders ------------------- */

.range-slider-container {
  display: flex;
  align-items: center;
}

.range-slider-container .label {
  padding-left: 4px;
  margin-right: 20px;
  font-style: italic;
}

.range-slider-container.master .label {
  color: rgba(45, 45, 45, 1);
}

.range-slider-container.active .label {
  color: rgba(246, 84, 133, 1);
}

.range-slider-container.disabled .label {
  color: rgba(160, 160, 160, 1);
}

.range-slider-container .track-container {
  flex-grow: 1;
  position: relative;
  padding: 16px 0;
}

.range-slider-container .range-slider {
  -webkit-appearance: none;
  appearance: none;
  width: 100%;
  height: 4px;
  border-radius: 2px;
  outline: none;
}

.range-slider-container .range-slider::-webkit-slider-thumb {
  /* Chrome, Opera, Safari, Edge */
  -webkit-appearance: none;
  appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 6px;
}

.range-slider-container .range-slider::-moz-range-thumb {
  /* Firefox */
  width: 12px;
  height: 12px;
  border-radius: 6px;
  border: none;
}

.range-slider-container.master .range-slider::-webkit-slider-thumb {
  background: rgba(45, 45, 45, 1);
  cursor: grab;
}
.range-slider-container.master .range-slider::-moz-range-thumb {
  background: rgba(45, 45, 45, 1);
  cursor: grab;
}

.range-slider-container.active .range-slider::-webkit-slider-thumb {
  background: rgba(246, 84, 133, 1);
  cursor: grab;
}
.range-slider-container.active .range-slider::-moz-range-thumb {
  background: rgba(246, 84, 133, 1);
  cursor: grab;
}

.range-slider-container.disabled .range-slider::-webkit-slider-thumb {
  background: rgba(160, 160, 160, 1);
}
.range-slider-container.disabled .range-slider::-moz-range-thumb {
  background: rgba(160, 160, 160, 1);
}

.range-slider-container .value-label {
  position: absolute;
  min-width: 34px;
  text-align: center;
  top: 2px;
  font-size: 14px;
}

.range-slider-container .min-value {
  position: absolute;
  left: 0;
  font-size: 9px;
}

.range-slider-container .max-value {
  position: absolute;
  right: 0;
  font-size: 9px;
}

.range-slider-container.master .value-label,
.range-slider-container.master .min-value,
.range-slider-container.master .max-value {
  color: rgba(45, 45, 45, 1);
}

.range-slider-container.active .value-label,
.range-slider-container.active .min-value,
.range-slider-container.active .max-value {
  color: rgba(246, 84, 133, 1);
}

.range-slider-container.disabled .value-label,
.range-slider-container.disabled .min-value,
.range-slider-container.disabled .max-value {
  color: rgba(160, 160, 160, 1);
}

/* ------------------- Matrix values ------------------- */

#bottom-half .matrix-values .highlighted {
  color: rgba(246, 84, 133, 1);
}

#bottom-half .matrix {
  width: 160px;
  height: 120px;
  padding: 10px;
  position: relative;
  margin-bottom: 30px;
}

#bottom-half .matrix .bracket {
  position: absolute;
  width: 10px;
  height: 120px;
  top: 0;
  border-top: 1px solid rgba(45, 45, 45, 1);
  border-bottom: 1px solid rgba(45, 45, 45, 1);
}

#bottom-half .matrix .bracket.left {
  border-left: 1px solid rgba(45, 45, 45, 1);
  left: 0;
}

#bottom-half .matrix .bracket.right {
  border-right: 1px solid rgba(45, 45, 45, 1);
  right: 0;
}

#bottom-half .matrix .value-container {
  height: 100px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

#bottom-half .matrix .value {
  text-align: center;
  line-height: 33.33px;
  font-style: italic;
}

#bottom-half .equations {
  font-style: italic;
  min-width: 125px;
}

#bottom-half .equations .row-2,
#bottom-half .equations .row-4 {
  padding-left: 16px;
}

